force-app/main/default/objects/Resource__c/fields/ApplicationURL__c.field-meta.xml
<CustomField>
    <fullName>ApplicationURL__c</fullName>
    <label>Application Website</label>
    <type>Url</type>
</CustomField>