force-app/main/default/objects/Resource__c/fields/DaysSinceOpened__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceOpened__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>