force-app/main/default/objects/Resource__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <description>Ex: youth under 18, medicaid recipients eligible</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>