force-app/main/default/objects/Resource__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <description>Link to resource Instagram page</description>
    <label>Instagram</label>
    <length>255</length>
    <type>Text</type>
</CustomField>