force-app/main/default/objects/Resource__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>&quot;Next steps&quot; that will help individual, ex: bring docs X,Y, &amp; Z</description>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>