force-app/main/default/objects/Resource__c/fields/IsResourceClaimed__c.field-meta.xml
<CustomField>
    <fullName>IsResourceClaimed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has an organization claimed this resource yet?</description>
    <label>Is resource claimed?</label>
    <type>Checkbox</type>
</CustomField>