force-app/main/default/objects/Resource__c/fields/ManagingAgencyName__c.field-meta.xml
<CustomField>
    <fullName>ManagingAgencyName__c</fullName>
    <label>Managing Agency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>