force-app/main/default/objects/Resource__c/fields/ManagingAgencyURL__c.field-meta.xml
<CustomField>
    <fullName>ManagingAgencyURL__c</fullName>
    <label>Managing Agency Website</label>
    <type>Url</type>
</CustomField>