force-app/main/default/objects/Resource__c/fields/ProgramPolicyURL__c.field-meta.xml
<CustomField>
    <fullName>ProgramPolicyURL__c</fullName>
    <label>Program Policy Website</label>
    <type>Url</type>
</CustomField>