force-app/main/default/objects/Resource__c/fields/ResourceType__c.field-meta.xml
<CustomField>
    <fullName>ResourceType__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer Opportunities</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Static Content</fullName>
            </value>
            <value>
                <fullName>Assistance Programs</fullName>
            </value>
            <value>
                <fullName>Job Opportunities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>