force-app/main/default/objects/Resource__c/fields/SdohDomain__c.field-meta.xml
<CustomField>
    <fullName>SdohDomain__c</fullName>
    <description>Indicates whether the SDOH category of the resource is Housing, Food, Employment, Transportation, Health, Financial, Education, Mental &amp; Addiction, Legal or Consumer</description>
    <label>SDOH Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Domain</valueSetName>
    </valueSet>
</CustomField>