force-app/main/default/objects/Resource__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>