force-app/main/default/objects/Resource__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Tags that make a resource easier to find and organize. Ex: food, utility, ability to pay phone bill, youth, seniors</description>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>