force-app/main/default/objects/Resource__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <description>Link to resource Twitter page</description>
    <label>Twitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>