force-app/main/default/objects/Resource__c/recordTypes/CommunityPartnerResource.recordType-meta.xml
<RecordType>
    <fullName>CommunityPartnerResource</fullName>
    <active>true</active>
    <label>Community Partner Resource</label>
</RecordType>