force-app/main/default/objects/Resource__c/recordTypes/ResourceMaster.recordType-meta.xml
<RecordType>
    <fullName>ResourceMaster</fullName>
    <active>true</active>
    <description>This is the default record type for Resource</description>
    <label>Resource Master</label>
</RecordType>