force-app/main/default/objects/Resource__c/recordTypes/StateProgram.recordType-meta.xml
<RecordType>
    <fullName>StateProgram</fullName>
    <active>true</active>
    <label>StateProgram</label>
</RecordType>