force-app/main/default/objects/Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SdohDomain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>